name:                   Crawler
cabal-version:          >= 1.2
build-type:             Simple
version:                0.4.2

executable Crawler
        main-is:        Main.hs
        hs-source-dirs: .
        build-depends:  base,
                        binary,
                        bytestring >= 0.9,
                        containers >= 0.4,
                        derive,
                        directory >= 1,
                        encoding >= 0.6,
                        fclabels >= 1.1,
                        filepath >= 1.3,
                        HTTP >= 4000,
                        mtl >= 2.1,
                        network >= 2.4,
                        optparse-applicative >= 0.5,
                        pureMD5 >= 2.1,
                        regex-base >= 0.9,
                        regex-tdfa >= 1.1,
                        strings >= 1,
                        tagsoup >= 0.12,
                        text >= 0.11,
                        text-binary >= 0.1,
                        text-format >= 0.3,
                        text-icu >= 0.6
